[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29", "numpy>=1.19"]
build-backend = "setuptools.build_meta"

[project]
name = "pyknotid"
version = "0.5.4"
description = "Tools for identifying and analysing knots, in space-curves or standard topological representations"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alexander Taylor", email = "alexander.taylor@bristol.ac.uk"}
]
keywords = ["knot", "knot-theory", "topology", "mathematics", "linking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.19",
    "networkx>=2.5",
    "planarity>=0.4",
    "peewee>=3.14",
    "vispy>=0.6",
    "sympy>=1.8",
    "appdirs>=1.4",
    "requests>=2.25",
    "tqdm>=4.60",
]

[project.optional-dependencies]
performance = [
    "numba>=0.55",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
    "numba>=0.55",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
]

[project.scripts]
analyse-knot-file = "pyknotid.cli.analyse_knot_file:main"
plot-knot = "pyknotid.cli.plot_knot:main"

[project.urls]
Homepage = "https://github.com/SPOCKnots/pyknotid"
Documentation = "http://pyknotid.readthedocs.io"
Repository = "https://github.com/SPOCKnots/pyknotid"
"Bug Tracker" = "https://github.com/SPOCKnots/pyknotid/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | doc
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["pyknotid"]
omit = [
    "*/tests/*",
    "*/doc/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
